<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sthlm.sweden.christofferwiregren.banino.SignUpFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/action_sign_in_short"
            android:textColor="@color/orangeDark"
            android:textSize="45dp"

            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ny_anvandare"

            android:textColor="@color/blackYO" />


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription=""
            android:src="@drawable/nnuser"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/Nickname"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/background_dark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/background_dark"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/background_dark"
            android:textSize="15sp" />


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_states"
            android:text="@string/reg_btn"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/blackYO"
            android:textSize="15sp" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
