<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sthlm.sweden.christofferwiregren.banino.LoginFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textColor="@color/orangeDark"
            android:textSize="60dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/oran_sub"

            android:textColor="@color/blackYO" />


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription=""
            android:src="@drawable/zombie"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/background_dark"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/background_dark"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dip"
            android:background="@drawable/button_states"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:background="@null"
            android:text="@string/lbl_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/blackYO"
            android:textSize="13dp" />


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textSize="13dp"
            tools:ignore="SpUsage" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
